--- a/presentation/01-slide-intro.html
+++ b/presentation/01-slide-intro.html
@@ -65,7 +65,7 @@ Nov. 10th 2020
 # Some resources
 
 .pull-left[
-#### *links* for great xaringan slides 😄  
+#### *links* for great xaringan slides 🙋  
 
 - [Garth Tarr presentation](https://garthtarr.github.io/sydney_xaringan/#1)  
 
@@ -147,8 +147,8 @@ there are just notes!
 ---
 
 # Interactive tables!  
-<div id="htmlwidget-7865251daee892c1bf6f" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7865251daee892c1bf6f">{"x":{"filter":"none","extensions":["Buttons"],"data":[[8.71,10.73,8.26,9.15,10.67,7.52,10.6,13.61,10.26,10.12],[-3.38,-0.95,-0.52,-1.25,2.23,3.52,1.18,1.26,-0.4,0.78],[5.32,9.78,7.74,7.9,12.9,11.04,11.78,14.86,9.86,10.89]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
+<div id="htmlwidget-8b462a0d3d2811fa40cd" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-8b462a0d3d2811fa40cd">{"x":{"filter":"none","extensions":["Buttons"],"data":[[8.77,13.81,14.77,11.34,9.68,10.52,11.92,8.79,8.51,9.26],[2.71,0.81,1.09,1.55,-0.38,-4.63,-2.01,0.47,4.34,-2.67],[11.47,14.62,15.85,12.89,9.3,5.89,9.9,9.26,12.85,6.59]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
 
 
 --
@@ -176,8 +176,8 @@ Make sure to toggle and zoom on the map ➡️]
 ]]
 
 .pull-right[
-<div id="htmlwidget-678f1a195f8d7394d673" style="width:504px;height:432px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-678f1a195f8d7394d673">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-126cb52bf64ce502822d" style="width:504px;height:432px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-126cb52bf64ce502822d">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
 ]
 
 
@@ -240,16 +240,16 @@ with flipbookr
 # A tibble: 10 x 3
        x     e     y
    &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
- 1  8.71 -3.38  5.32
- 2 10.7  -0.95  9.78
- 3  8.26 -0.52  7.74
- 4  9.15 -1.25  7.9 
- 5 10.7   2.23 12.9 
- 6  7.52  3.52 11.0 
- 7 10.6   1.18 11.8 
- 8 13.6   1.26 14.9 
- 9 10.3  -0.4   9.86
-10 10.1   0.78 10.9 
+ 1  8.77  2.71 11.5 
+ 2 13.8   0.81 14.6 
+ 3 14.8   1.09 15.8 
+ 4 11.3   1.55 12.9 
+ 5  9.68 -0.38  9.3 
+ 6 10.5  -4.63  5.89
+ 7 11.9  -2.01  9.9 
+ 8  8.79  0.47  9.26
+ 9  8.51  4.34 12.8 
+10  9.26 -2.67  6.59
 ```
 ]
 
@@ -407,7 +407,7 @@ You'll have 5 minutes!
 --
 
 .pull-left[
-<div class="countdown" id="timer_5faeb91c" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
+<div class="countdown" id="timer_5faec1ac" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>  
 ]
@@ -426,14 +426,17 @@ class: center, middle
 # Thanks for your attention,  
 # let's connect!  
 
+.pull-right[.left[
 .Large[
 <i class="fab  fa-twitter "></i> [@leoNitrogen](https://twitter.com/leoNitrogen) 
 
 <i class="fab  fa-linkedin "></i> [Leonardo M. Bastos](https://www.linkedin.com/in/leonardo-m-bastos-b4b35510b/)  
 
 <i class="fas  fa-rss "></i> [agRonomy](https://agronomy.netlify.app)
- 
-]
+
+<i class="fab  fa-github "></i> [@leombastos](https://github.com/leombastos)
+
+]]]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
