--- a/presentation/01-slide-intro.html
+++ b/presentation/01-slide-intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>actualpresentation</title>
+    <title>01-intro</title>
     <meta charset="utf-8" />
     <link href="01-slide-intro_files/remark-css-0.0.1/hygge.css" rel="stylesheet" />
     <link href="01-slide-intro_files/tile-view-0.2.4/tile-view.css" rel="stylesheet" />
@@ -10,6 +10,22 @@
     <link href="01-slide-intro_files/xaringanExtra-clipboard-0.2.4/xaringanExtra-clipboard.css" rel="stylesheet" />
     <script src="01-slide-intro_files/xaringanExtra-clipboard-0.2.4/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <meta name="github-repo" content="leombastos/01-slides-intro"/>
+    <meta name="twitter:title" content="Creating presentations with xaringan"/>
+    <meta name="twitter:description" content="Exploring the xaringan package for sharp presentation slides Nov. 2020."/>
+    <meta name="twitter:url" content="https://agronomy.netlify.app/slides/01-slide-intro/presentation/01-slide-intro.html#1"/>
+    <meta name="twitter:image:alt" content="Title slide of Build your own universe: Scale high-quality research data provisioning with R packages, presented at R/Medicine 2020 by Travis Gerke and Garrick Aden-Buie"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:creator" content="@leoNitrogen"/>
+    <meta name="twitter:site" content="@leoNitrogen"/>
+    <meta property="og:title" content="Creating presentations with xaringan"/>
+    <meta property="og:description" content="Exploring the xaringan package for sharp presentation slides Nov. 2020."/>
+    <meta property="og:url" content="https://agronomy.netlify.app/slides/01-slide-intro/presentation/01-slide-intro.html#1"/>
+    <meta property="og:image:alt" content="Title slide of Build your own universe: Scale high-quality research data provisioning with R packages, presented at R/Medicine 2020 by Travis Gerke and Garrick Aden-Buie"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_US"/>
+    <meta property="article:author" content="Leo Bastos"/>
+    <link href="01-slide-intro_files/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
     <script src="01-slide-intro_files/htmlwidgets-1.5.2/htmlwidgets.js"></script>
     <script src="01-slide-intro_files/jquery-1.12.4/jquery.min.js"></script>
     <link href="01-slide-intro_files/datatables-css-0.0.0/datatables-crosstalk.css" rel="stylesheet" />
@@ -26,7 +42,6 @@
     <script src="01-slide-intro_files/dt-ext-buttons-1.10.20/js/buttons.print.min.js"></script>
     <link href="01-slide-intro_files/crosstalk-1.1.0.1/css/crosstalk.css" rel="stylesheet" />
     <script src="01-slide-intro_files/crosstalk-1.1.0.1/js/crosstalk.min.js"></script>
-    <link href="01-slide-intro_files/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="01-slide-intro_files/leaflet-1.3.1/leaflet.css" rel="stylesheet" />
     <script src="01-slide-intro_files/leaflet-1.3.1/leaflet.js"></script>
     <link href="01-slide-intro_files/leafletfix-1.0.0/leafletfix.css" rel="stylesheet" />
@@ -44,28 +59,40 @@
 
 
 
+
+
 layout: true
 background-image: url("ciampittilab.png")
 background-size: 120px
 background-position: 97% 2%
 
 ---
-
+background-image: url(wheat.jpg)
+background-size: cover
 class: center, middle
 
-# Creating presentations with *xaringan*  
-## Leonardo M. Bastos  
-.Large[📡 🌱 🌽]  
+.top[# .white[Creating presentations with *xaringan*]]  
+.top[### .white[Leonardo M. Bastos | Nov. 10th 2020]]  
 
-.pull-right[
-Nov. 10th 2020  
-]
+
+.pull-left[.Large[.black[.right[
+[.white[@leoNitrogen]](https://twitter.com/leoNitrogen) <i class="fab  fa-twitter "></i>
+
+[.white[Leonardo M. Bastos]](https://www.linkedin.com/in/leonardo-m-bastos-b4b35510b/) <i class="fab  fa-linkedin "></i>
+]]]]
+
+.pull-right[.Large[.black[.left[
+<i class="fas  fa-rss "></i> [.white[agRonomy]](https://agronomy.netlify.app)
+
+<i class="fab  fa-github "></i> [.white[@leombastos]](https://github.com/leombastos)
+
+]]]]
 
 ---
 # Some resources
 
 .pull-left[
-#### *links* for great xaringan slides 🙋  
+#### *links* for great xaringan slides 😄  
 
 - [Garth Tarr presentation](https://garthtarr.github.io/sydney_xaringan/#1)  
 
@@ -147,8 +174,8 @@ there are just notes!
 ---
 
 # Interactive tables!  
-<div id="htmlwidget-8b462a0d3d2811fa40cd" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-8b462a0d3d2811fa40cd">{"x":{"filter":"none","extensions":["Buttons"],"data":[[8.77,13.81,14.77,11.34,9.68,10.52,11.92,8.79,8.51,9.26],[2.71,0.81,1.09,1.55,-0.38,-4.63,-2.01,0.47,4.34,-2.67],[11.47,14.62,15.85,12.89,9.3,5.89,9.9,9.26,12.85,6.59]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
+<div id="htmlwidget-a9d06a1635683ece12a2" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-a9d06a1635683ece12a2">{"x":{"filter":"none","extensions":["Buttons"],"data":[[10.23,9.38,10.93,12.15,10.17,13.04,8.86,10.54,12.52,10.65],[1.34,0.06,0.29,-0.97,0.65,-4,2.7,-6.31,3.23,-3.4],[11.57,9.44,11.22,11.18,10.81,9.03,11.56,4.23,15.75,7.25]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
 
 
 --
@@ -176,8 +203,8 @@ Make sure to toggle and zoom on the map ➡️]
 ]]
 
 .pull-right[
-<div id="htmlwidget-126cb52bf64ce502822d" style="width:504px;height:432px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-126cb52bf64ce502822d">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-6078295f127cbb3a53ea" style="width:504px;height:432px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-6078295f127cbb3a53ea">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
 ]
 
 
@@ -238,18 +265,18 @@ with flipbookr
 
 ```
 # A tibble: 10 x 3
-       x     e     y
-   &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
- 1  8.77  2.71 11.5 
- 2 13.8   0.81 14.6 
- 3 14.8   1.09 15.8 
- 4 11.3   1.55 12.9 
- 5  9.68 -0.38  9.3 
- 6 10.5  -4.63  5.89
- 7 11.9  -2.01  9.9 
- 8  8.79  0.47  9.26
- 9  8.51  4.34 12.8 
-10  9.26 -2.67  6.59
+       x      e     y
+   &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;
+ 1 10.2   1.34  11.6 
+ 2  9.38  0.06   9.44
+ 3 10.9   0.290 11.2 
+ 4 12.2  -0.97  11.2 
+ 5 10.2   0.65  10.8 
+ 6 13.0  -4      9.03
+ 7  8.86  2.7   11.6 
+ 8 10.5  -6.31   4.23
+ 9 12.5   3.23  15.8 
+10 10.6  -3.4    7.25
 ```
 ]
 
@@ -407,7 +434,7 @@ You'll have 5 minutes!
 --
 
 .pull-left[
-<div class="countdown" id="timer_5faec1ac" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
+<div class="countdown" id="timer_5fb40aec" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>  
 ]
