updated deck and knitted

--- a/slides/deck.html
+++ b/slides/deck.html
@@ -96,7 +96,7 @@ class: center, middle
 # Some resources
 
 .pull-left[
-#### *links* for great xaringan slides 😀  
+#### *links* for great xaringan slides 🙋  
 
 - [Garth Tarr presentation](https://garthtarr.github.io/sydney_xaringan/#1)  
 
@@ -178,8 +178,8 @@ there are just notes!
 ---
 
 # Interactive tables!  
-<div id="htmlwidget-7db0b35b99d1ae9c034e" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7db0b35b99d1ae9c034e">{"x":{"filter":"none","extensions":["Buttons"],"data":[[11.29,11.18,10.78,12.87,9.97,8.53,10.81,9.69,8.36,11.26],[-2.18,-2.15,3.34,1.44,-0.35,-0.38,0.78,-3.77,0.78,0.07],[9.11,9.04,14.12,14.31,9.62,8.15,11.59,5.92,9.13,11.32]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
+<div id="htmlwidget-e87e9319389145be9c8f" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-e87e9319389145be9c8f">{"x":{"filter":"none","extensions":["Buttons"],"data":[[10.18,10.6,9.51,8.9,13.75,10.61,8.26,12.02,11.94,9.16],[-1.8,1.34,-2.74,-0.76,2.08,2.01,2.36,1.12,1.29,0.6],[8.38,11.94,6.77,8.13,15.83,12.63,10.62,13.14,13.23,9.77]],"container":"<table class=\"compact\">\n  <thead>\n    <tr>\n      <th>x<\/th>\n      <th>e<\/th>\n      <th>y<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"tBp","buttons":["csv","excel"],"pageLength":4,"columnDefs":[{"targets":0,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":1,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"targets":2,"render":"function(data, type, row, meta) { return DTWidget.formatRound(data, 1, 3, \",\", \".\"); }"},{"className":"dt-right","targets":[0,1,2]}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[4,10,25,50,100]}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render"],"jsHooks":[]}</script>
 
 
 --
@@ -207,8 +207,8 @@ Make sure to toggle and zoom on the map ➡️]
 ]]
 
 .pull-right[
-<div id="htmlwidget-ed60c4c430847e0e23b2" style="width:504px;height:432px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-ed60c4c430847e0e23b2">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-08808c80d1f319c3ede0" style="width:504px;height:432px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-08808c80d1f319c3ede0">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
 ]
 
 
@@ -271,16 +271,16 @@ with flipbookr
 # A tibble: 10 x 3
        x     e     y
    &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
- 1 11.3  -2.18  9.11
- 2 11.2  -2.15  9.04
- 3 10.8   3.34 14.1 
- 4 12.9   1.44 14.3 
- 5  9.97 -0.35  9.62
- 6  8.53 -0.38  8.15
- 7 10.8   0.78 11.6 
- 8  9.69 -3.77  5.92
- 9  8.36  0.78  9.13
-10 11.3   0.07 11.3 
+ 1 10.2  -1.8   8.38
+ 2 10.6   1.34 11.9 
+ 3  9.51 -2.74  6.77
+ 4  8.9  -0.76  8.13
+ 5 13.8   2.08 15.8 
+ 6 10.6   2.01 12.6 
+ 7  8.26  2.36 10.6 
+ 8 12.0   1.12 13.1 
+ 9 11.9   1.29 13.2 
+10  9.16  0.6   9.77
 ```
 ]
 
@@ -438,7 +438,7 @@ You'll have 5 minutes!
 --
 
 .pull-left[
-<div class="countdown" id="timer_5fb75bca" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
+<div class="countdown" id="timer_5fb820ba" style="bottom:10;left:15;padding:0px;" data-audio="true" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>  
 ]
@@ -468,10 +468,6 @@ class: center, middle
 <i class="fab  fa-github "></i> [@leombastos](https://github.com/leombastos)
 
 ]]]
-
----
-
-This is a test
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
